--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
                 </select>
                 <input class="telefono" type="tel" id="phoneInput" placeholder="Su numero de telefono">
             </div>
-            <button onclick="mostrarDatos()" class="submit" type="submit">Enviar</button>
+            <button class="submit" type="submit" >Enviar</button>
             
         </form>
        
