--- a/Index.html
+++ b/Index.html
@@ -43,15 +43,18 @@
             <div class="hola">
                 <div class="nombre" >
                     <p class="tres">Nombre</p>
+                    <br>
                     <input type="text" id="nameInput" placeholder="Nombre">
                 </div>
                 <div class="apellido">
                     <p class="dos" >Apellido</p>
+                    <br>
                     <input type="text" id="lastNameInput" placeholder="Apellido">
                 </div>
             </div>
             <div class="email" >
                 <p class="cuatro">Email</p>
+                <br>
                 <input class="correo" type="text" id="emailInput" placeholder="Email">
             </div>
             <div class="pais">
@@ -75,7 +78,7 @@
             <div>
                 <div class="direccion">
                     <p>Montevideo</p>
-                    <p>Camino Ariel 4376, 12900 Montevideo,</p>
+                    <p>Camino Ariel 4376, 12900 Montevideo</p>
                     <p>Departamento de Montevideo</p>
                     
                 </div>
