--- a/Index.html
+++ b/Index.html
@@ -42,18 +42,18 @@
         <form>
             <div class="hola">
                 <div class="nombre" >
-                    <p class="tres">Nombre</p>
+                    <p>Nombre</p>
                     <br>
                     <input type="text" id="nameInput" placeholder="Nombre">
                 </div>
                 <div class="apellido">
-                    <p class="dos" >Apellido</p>
+                    <p>Apellido</p>
                     <br>
                     <input type="text" id="lastNameInput" placeholder="Apellido">
                 </div>
             </div>
             <div class="email" >
-                <p class="cuatro">Email</p>
+                <p>Email</p>
                 <br>
                 <input class="correo" type="text" id="emailInput" placeholder="Email">
             </div>
